--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "GOT";
-    src: url(../fontes/GOT.ttf);
+    src: url(../fonts/GOT.ttf);
 }
 
 @keyframes mudarImagem {
